--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,9 @@
- 
+to do 
+=====
+
+* Merge this code with smash-paper, and re-organize.
+
+* Is graphs.Rmd needed? If so, add packages used in graphs.Rmd to
+  setup instructions.
+
+* Add sessionInfo() to README.
