--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,10 @@ to do
 * Add sessionInfo() to README.
 
 * Fix system statements that use 'rm' command.
+
+* Add more verbose to running methods, particularly methods that call
+  MATLAB, so we know what is going on when things go wrong.
+
+* Add Wavelab and WavDen code to this repo.
+
+  
